--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ main{
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-top: 30px;
 }
 
 .inform{
@@ -121,7 +122,7 @@ main{
     justify-content: center;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 20px;
-    max-width: 620px;
+    margin-left: 0px;
 
 
 }
@@ -142,12 +143,17 @@ main{
         overflow-x: hidden;
     }
 
+    .text{
+        font-size: 20px;
+    }
+
     .text2{
         font-size: 20px;
     }
 
 
     .container{
+        border-top: 1px solid black;
         margin-top: 40px;
         background-color: #806612;
         margin: 0;
